Small fixes.
- Remove registry from GridShape.
- Extra space in composite description.
- Fix background of killer cage sums.

--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ button.image-button>img {
 
 #composite-chip-view {
   grid-template-columns: 1fr;
-  margin-bottom: 5px;
+  margin: 5px 0;
   min-height: 4em;
 }
 
